Added a pie chart and an area chart

--- a/analysis/analysis/analysis.ipynb
+++ b/analysis/analysis/analysis.ipynb
@@ -11,6 +11,8 @@
     "import plotly.graph_objects as go\n",
     "import utils\n",
     "import plots\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "pd.set_option('display.max_row', 1000)\n",
     "pd.set_option('display.max_columns', 50)\n",
     "data = {\n",
@@ -47,17 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plots.top_countries_deaths_over_threshold_and_aligned(deaths)\n",
-    "fig.show()\n",
-    "data['plots']['figure_3'] = fig.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fig = plots.countries_deaths_over_threshold(deaths)\n",
     "fig.show()\n",
     "data['plots']['figure_2'] = fig.to_json()"
@@ -69,9 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plots.deaths_over_threshold_and_aligned(deaths)\n",
+    "fig = plots.top_countries_deaths_over_threshold_and_aligned(deaths)\n",
     "fig.show()\n",
-    "data['plots']['figure_4'] = fig.to_json()"
+    "data['plots']['figure_3'] = fig.to_json()"
    ]
   },
   {
@@ -83,6 +74,17 @@
     "fig = plots.aligned_on_lockdown(deaths)\n",
     "fig.show()\n",
     "data['plots']['figure_5'] = fig.to_json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plots.deaths_area(deaths)\n",
+    "fig.show()\n",
+    "data['plots']['deaths_area'] = fig.to_json()"
    ]
   },
   {
