--- a/analysis/analysis/analysis.ipynb
+++ b/analysis/analysis/analysis.ipynb
@@ -140,7 +140,7 @@
    },
    "outputs": [],
    "source": [
-    "fig = plots.daily_change(deaths, 3)\n",
+    "fig = plots.daily_change(deaths, 7)\n",
     "fig.show()\n",
     "data['plots']['daily_change'] = fig.to_json()"
    ]
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plots.daily_change(deaths.loc[pd.to_datetime(deaths.index) >= pd.to_datetime('2020-03-01')], 1)\n",
+    "fig = plots.daily_change(deaths.loc[pd.to_datetime(deaths.index) >= pd.to_datetime('2020-03-01')], 7)\n",
     "fig.show()\n",
     "data['plots']['daily_change2'] = fig.to_json()"
    ]
@@ -198,6 +198,16 @@
    "outputs": [],
    "source": [
     "fig = plots.current_distribution(deaths)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plots.top_deaths_per_time(deaths)\n",
     "fig.show()"
    ]
   },
@@ -263,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0-final"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
